# scheduler

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.local.yml  docker-compose.production.yml  manage.py  pyproject.toml
.envs/.local/: .django  .postgres
.github/workflows/: ci.yml
compose/local/django/: Dockerfile  start
compose/local/django/celery/beat/: start
compose/local/django/celery/worker/: start
compose/local/postgres/: Dockerfile
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
locale/en_US/LC_MESSAGES/: django.po
requirements/: base.txt  local.txt  production.txt
webtask_scheduler/: conftest.py
webtask_scheduler/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
webtask_scheduler/scheduler/: apps.py  serializers.py  services.py  tasks.py  urls.py  views.py
webtask_scheduler/scheduler/tests/: test_services.py  test_tasks.py  test_views.py
webtask_scheduler/templates/: base.html
webtask_scheduler/users/: apps.py  forms.py  models.py  tasks.py  urls.py
webtask_scheduler/users/api/: serializers.py  views.py
webtask_scheduler/users/migrations/: 0001_initial.py
webtask_scheduler/users/tests/: factories.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_swagger.py  test_tasks.py
